--- a/js loop/reverse/index.html
+++ b/js loop/reverse/index.html
@@ -11,6 +11,17 @@
       for (let counter = 5; counter >= 1; counter--) {
         console.log(counter);
       }
+
+      let n = 5;
+      let string = "";
+      for (let row = 0; row < n; row++) {
+        for (let col = 0; col < n; col++) {
+          string += "*";
+        }
+        // newline after each row
+        string += "\n";
+      }
+      console.log(string);
     </script>
   </body>
 </html>
