--- a/javascript/class/JS ES-6/index.html
+++ b/javascript/class/JS ES-6/index.html
@@ -25,6 +25,15 @@
         >
           Create +
         </button>
+        <a
+          href="./signin.html"
+          type="button"
+          class="btn btn-primary"
+          data-bs-toggle="modal"
+          data-bs-target="#carModal"
+        >
+          Sign in
+        </a>
       </div>
       <div class="row g-3" id="cars"></div>
     </div>
