--- a/javascript/extra-lessons/index.html
+++ b/javascript/extra-lessons/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./functions.js"></script>
+    <!-- <script src="./functions.js"></script> -->
+    <script src="./simple-function-assignment.js"></script>
+    <script src="./tip.js"></script>
 </body>
 </html>
